devise and jquery

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,10 @@
   <%= csrf_meta_tag %>
 </head>
 <body>
+	<%= @current_account.try(:subdomain) %>
+	<p class="notice"><%= notice %></p>
+	       <p class="alert"><%= alert %></p>
+
 
 <%= yield %>
 
