--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -3,10 +3,10 @@
 <%= form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f| %>
   <%= devise_error_messages! %>
 
-  <p><%= f.label :email %><br />
-  <%= f.text_field :email %></p>
+  <%= f.label :email %>
+  <%= f.text_field :email %>
 
-  <p><%= f.submit "Resend confirmation instructions" %></p>
+  <%= f.submit "Resend confirmation instructions" %>
 <% end %>
 
 <%= render :partial => "devise/shared/links" %>
