--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,19 +3,21 @@
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
 
-  <p><%= f.label :email %><br />
-  <%= f.text_field :email %></p>
+  <%= f.label :email %>
+  <%= f.text_field :email %>
 
-  <p><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-  <%= f.password_field :password %></p>
+  <%= f.label :password %>
+  <i>(leave blank if you don't want to change it)</i>
+  <%= f.password_field :password %>
 
-  <p><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></p>
+  <%= f.label :password_confirmation %>
+  <%= f.password_field :password_confirmation %>
 
-  <p><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-  <%= f.password_field :current_password %></p>
+  <%= f.label :current_password %> 
+  <i>(we need your current password to confirm your changes)</i>
+  <%= f.password_field :current_password %>
 
-  <p><%= f.submit "Update" %></p>
+  <%= f.submit "Update" %>
 <% end %>
 
 <h3>Cancel my account</h3>
