bad styling and fixed cron

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<div id="chart" style="width:600px;height:300px;"></div> 
+<div class="ml160 g640" id="chart" style="height:300px"></div> 
 <script id="source" language="javascript" type="text/javascript"> 
 $(function () {
 	
