--- a/app/views/layouts/golden.html.erb
+++ b/app/views/layouts/golden.html.erb
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<title>Sales2l</title>
-	<%= stylesheet_link_tag 'sales2l.css', "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.2/themes/cupertino/jquery-ui.css" %>
+	<%= stylesheet_link_tag 'sales2l.css', "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.2/themes/cupertino/jquery-ui.css", 'css_menu_style.css' %>
 	<%= javascript_include_tag :defaults, 'jquery-ui-1.8.2.custom.min.js', 'jquery.autocomplete.js', 'jquery.flot.min.js' %>
 	<!--[if IE]><script language="javascript" type="text/javascript" src="../excanvas.min.js"></script><![endif]-->
 	<%= csrf_meta_tag %>
@@ -22,19 +22,27 @@
 			    <%= link_to "Sign Out", destroy_user_session_url %>
 			  <% end %>
 		</div>	
-		<div class = "g960", id="menu">
+		<div class = "g960", style="margin-top:6px;margin-bottom:10px">
 		<% if current_user %>
-			<h3>
-				<%= link_to_unless_current("Home", home_url) %> | 
-				Forecast | 
-                <%= link_to_unless_current("Opportunities", opportunities_url) %> | 
-				Journal | 
-				Files | 
-				<%= link_to_unless_current("My Sales2L", my_sales2l_url) %>
-                
-			</h3>
+		<ul id="css3menu">
+			<li class="topfirst"><%= link_to("Home", home_url) %></li>
+			<li class="topitem"><a href="#">Forecast</a></li>
+			<li class="topitem"><%= link_to("Opportunities", opportunities_url) %></li>
+			<li class="topitem"><a href="#">Journal</a></li>
+			<li class="topitem"><a href="#">Files</a></li>
+			<li class="topitem"><%= link_to("My Sales2L", my_sales2l_url) %></li>
+			<% if can? :create, Opportunity -%>
+			<li class="topitem"><%= link_to("New Opportunity", new_opportunity_url) %></li>
+			<% end -%>
+			<li class="toplast"><a href="#"><span>More...</span></a>
+			<ul>
+				<li class="subfirst"><%= link_to("Users", users_url) %></li>
+				<li><%= link_to("Confidences", confidences_url) %></li>
+			</ul>
+			</li>
+		</ul>
 		<% end %>
-		</div>
+		</div>	
 		<div class="g960">
 			<% flash.each do |key, value| -%>
 			<h4 id="flash_<%= key %>"><%= value %></h4>
