menus and some styling

--- a/public/stylesheets/sales2l.css
+++ b/public/stylesheets/sales2l.css
@@ -284,3 +284,13 @@ a:hover {
 .lipstick { color:#c20c0c; }
 
 
+.red      { color:#c20c0c; }
+.pale-red { color:#F5BBBB; }
+.red { color:#c20c0c; }
+.red { color:#c20c0c; }
+.red { color:#c20c0c; }
+.red { color:#c20c0c; }
+.red { color:#c20c0c; }
+.red { color:#c20c0c; }
+
+
