--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,5 @@
-<div class="ml160 g640" id="chart" style="height:300px"></div> 
+<div class="g640">
+<div id="chart" style="width:600px;height:300px;margin-right:auto;margin-left:auto;"></div> 
 <script id="source" language="javascript" type="text/javascript"> 
 $(function () {
 	
@@ -9,16 +10,19 @@ $(function () {
     $.plot($("#chart"), [
 
         {
+	        color: "#F5DE6F",
 	        label: "Targets",
             data: d[0],
             lines: { show: true, steps: true, fill: true, lineWidth: 0}
         },
         {
+    	    color: "#9479EB",
 	        label: "Bookings",
             data: d[1],
             bars: { show: true, barWidth: 1000*60*60*24*22, lineWidth: 0 }
         },
         {
+    	    color: "#C5BAEB",	
 	        label: "Forecast",
             data: d[2],
             bars: { show: true, barWidth: 1000*60*60*24*22, lineWidth: 0 }
@@ -53,7 +57,9 @@ $(function () {
 	<% end %>
 </table>
 
-<table>
+
+</div> 
+<div class="g320" style="background:grey"><table>
   <caption>New to the Forecast</caption>
 	<% @recent_forecast.each do |opportunity| %>
 	  <tr>
@@ -62,4 +68,4 @@ $(function () {
 	    <td><%= opportunity.user.nickname %></td>
 	  </tr>
 	<% end %>
-</table>
+</table></div>
