--- a/app/views/layouts/golden.html.erb
+++ b/app/views/layouts/golden.html.erb
@@ -2,53 +2,46 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<title>Sales2l</title>
-	<%= stylesheet_link_tag 'sales2l.css', "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.2/themes/cupertino/jquery-ui.css", 'css_menu_style.css' %>
+	<%= stylesheet_link_tag 's2l.css', "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.2/themes/cupertino/jquery-ui.css", 'menu/dropdown.css', 'menu/default.ultimate.css'%>
 	<%= javascript_include_tag :defaults, 'jquery-ui-1.8.2.custom.min.js', 'jquery.autocomplete.js', 'jquery.flot.min.js' %>
 	<!--[if IE]><script language="javascript" type="text/javascript" src="../excanvas.min.js"></script><![endif]-->
 	<%= csrf_meta_tag %>
 </head>
+<!-- <body style='background: #4c4c4c url(images/grad1.png) 0 0 repeat-x;'> -->
+<!-- <body style='background:#f2f2f2;'> -->
 <body>
-	<div class="main">
-		<div class="g320">
-			<%= image_tag 'sales2l.png', :id => 'logo'%>
-		</div>
-		<div class="g640", id="top_nav">
-			<% if current_user %>
-			    Howdy <%= current_user.nickname %>! | 
-			    <%= link_to "User Profile", profile_url %> |
-			    <% if can? :change_settings, Account %>
-			    <%= link_to "Account Settings", settings_url %> |
-			    <% end %>
-			    <%= link_to "Sign Out", destroy_user_session_url %>
-			  <% end %>
-		</div>	
-		<div class = "g960", style="margin-top:6px;margin-bottom:10px">
+  <div class="main">
+	<div class="g320"><%= image_tag 'sales2l.png', :id => 'logo'%></div>
+	<div class="g640" id="top_nav">
 		<% if current_user %>
-		<ul id="css3menu">
-			<li class="topfirst"><%= link_to("Home", home_url) %></li>
-			<li class="topitem"><a href="#">Forecast</a></li>
-			<li class="topitem"><%= link_to("Opportunities", opportunities_url) %></li>
-			<li class="topitem"><a href="#">Journal</a></li>
-			<li class="topitem"><a href="#">Files</a></li>
-			<li class="topitem"><%= link_to("My Sales2L", my_sales2l_url) %></li>
-			<% if can? :create, Opportunity -%>
-			<li class="topitem"><%= link_to("New Opportunity", new_opportunity_url) %></li>
-			<% end -%>
-			<li class="toplast"><a href="#"><span>More...</span></a>
-			<ul>
-				<li class="subfirst"><%= link_to("Users", users_url) %></li>
-				<li><%= link_to("Confidences", confidences_url) %></li>
-			</ul>
+		  Howdy <%= current_user.nickname %>! 
+		  <%= link_to "User Profile", profile_url %>
+		  <% if can? :change_settings, Account %>
+		  <%= link_to "Account Settings", settings_url %>
+		  <% end %>
+		  <%= link_to "Sign Out", destroy_user_session_url %>
+		<% end %>
+	</div>	
+	<div class="g960" id="nav">
+		<ul class="dropdown dropdown-horizontal">
+			<li id="n-home"><%= link_to("Home", home_url) %></li>
+			<li id="n-forecast"><%= link_to("Forecast", home_url) %></li>
+			<li id="n-opportunities"><%= link_to("Opportunities", opportunities_url) %></li>
+			<li id="n-forecast"><%= link_to("Forecast", home_url) %></li>
+			<li id="n-forecast"><%= link_to("Forecast", home_url) %></li>
+			<li id="n-more"><span class="dir">More...</span>
+				<ul>
+					<li class="first"><%= link_to("Users", users_url) %></li>
+					<li><%= link_to("Confidences", confidences_url) %></li>
+				</ul>
 			</li>
 		</ul>
-		<% end %>
-		</div>	
-		<div class="g960">
+	</div>
+	<div class="g960">	
 			<% flash.each do |key, value| -%>
 			<h4 id="flash_<%= key %>"><%= value %></h4>
 			<% end -%>
 			<%= yield %>	
-		</div>
 	</div>
 </body>
 </html>
