--- a/app/views/layouts/golden.html.erb
+++ b/app/views/layouts/golden.html.erb
@@ -29,7 +29,7 @@
 			<li id="n-opportunities"><%= link_to("Opportunities", opportunities_url) %></li>
 			<li id="n-forecast"><%= link_to("Forecast", home_url) %></li>
 			<li id="n-forecast"><%= link_to("Forecast", home_url) %></li>
-			<li id="n-more"><span class="dir">More...</span>
+			<li id="n-more" style="border-right:1px solid #505050;"><span class="dir">More...</span>
 				<ul>
 					<li class="first"><%= link_to("Users", users_url) %></li>
 					<li><%= link_to("Confidences", confidences_url) %></li>
