--- a/public/stylesheets/s2l.css
+++ b/public/stylesheets/s2l.css
@@ -228,7 +228,7 @@ select {
 	font-family:'Helvetica Neue', Arial, 'Liberation Sans', FreeSans, sans-serif;
 }
 form ul, form li {
-	color:#C20C0C;
+	color:#777;
 	font-family: 'Courier New', Courier,  monospace;
 	font-weight: bold;
 	margin-bottom:0;
@@ -243,7 +243,7 @@ input[type="submit"] {
 /* Page Styles */
 
 #logo {
-	margin:-6px 0 4px 0;
+	margin:-4px 0 2px 0;
 }
 #top_nav {
 	text-align:right;
