--- a/public/stylesheets/s2l.css
+++ b/public/stylesheets/s2l.css
@@ -243,10 +243,11 @@ input[type="submit"] {
 /* Page Styles */
 
 #logo {
-	margin:-4px 0 2px 0;
+	margin:-3px 0 1px -1px;
 }
 #top_nav {
 	text-align:right;
+	margin-right:2px;
 }
 #top_nav a{
 	margin:0 3px;
