--- a/app/views/layouts/golden.html.erb
+++ b/app/views/layouts/golden.html.erb
@@ -3,8 +3,8 @@
 <head>
 	<title>Sales2l</title>
 	<%= stylesheet_link_tag 's2l.css', "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.2/themes/cupertino/jquery-ui.css", 'menu/dropdown.css', 'menu/default.ultimate.css'%>
-	<%= javascript_include_tag :defaults, 'jquery-ui-1.8.2.custom.min.js', 'jquery.autocomplete.js', 'jquery.flot.min.js', 'excanvas.min.js' %>
-	<!--[if IE]><script language="javascript" type="text/javascript" src="../javascripts/excanvas.min.js"></script><![endif]-->
+	<%= javascript_include_tag :defaults, 'jquery-ui-1.8.2.custom.min.js', 'jquery.autocomplete.js', 'jquery.flot.min.js' %>
+	<!--[if IE]><%= javascript_include_tag 'excanvas.compiled.js' %><![endif]-->
 	<%= csrf_meta_tag %>
 </head>
 <!-- <body style='background: #4c4c4c url(images/grad1.png) 0 0 repeat-x;'> -->
