comma messing up excanvas?

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,7 +13,7 @@ $(function () {
         	color: "#f5e17f",
         	label: "Targets",
             data: d[0],
-            lines: { show: true, steps: true, lineWidth: 0, fill: .5 },
+            lines: { show: true, steps: true, lineWidth: 0, fill: .5 }
         },
         {
     	    color: "#9479EB",
