form framework and some opportunity validations

--- a/app/views/layouts/golden.html.erb
+++ b/app/views/layouts/golden.html.erb
@@ -11,6 +11,7 @@
 <!-- <body style='background:#f2f2f2;'> -->
 <body>
   <div class="main">
+  <!-- <div class="main" style="background-image: url(/images/baseline.png); background-repeat: repeat; background-position: 0 9px;"> -->
 	<div class="g320"><%= image_tag 'sales2l.png', :id => 'logo'%></div>
 	<div class="g640" id="top_nav">
 		<% if current_user %>
