--- a/app/views/opportunities/_form.html.erb
+++ b/app/views/opportunities/_form.html.erb
@@ -1,6 +1,4 @@
-<%= form_for @opportunity do |f| %>
-
-  <h5><%= legend %></h5>
+<div class="g480 form-container">
 
   <% if @opportunity.errors.any? %>
     <ul>
@@ -10,37 +8,43 @@
     </ul>
   <% end %>
 
-  <%= fields_for :customer, @opportunity.customer do |c| %>
-      <%= c.label :name, "Customer" %>
-      <%= c.text_field :name %>
+  <%= form_for @opportunity do |f| %>
+    <fieldset>
+      <legend><%= legend %></legend>
+      
+      <%= fields_for :customer, @opportunity.customer do |c| %>
+        <div><%= c.label :name, "Customer" %><%= c.text_field :name %></div>
+      <% end %>
+
+      <div><%= f.label :name, 'Opportunity'%><%= f.text_field :name %></div>
+
+      <div><%= f.label :order_value %><%= f.text_field :order_value %></div>
+
+      <div><%= f.label :order_date %><%= f.text_field :order_date %></div>
+
+	  <div class="controlset">
+	    <label class="controlset">Status</label>
+	    <div>
+		  <% Opportunity::STATUSES.each do |status| %>
+	        <%= f.radio_button :status, status %>
+	        <%= f.label :status, status.to_s.humanize, :value => status, :class => "radio" %><br>
+	      <% end %>
+        </div>
+      </div>
+
+	  <div class="controlset">
+	    <label class="controlset">Confidence</label>
+	    <div>
+		    <% @confidences.each do |confidence| %>
+	        <%= f.radio_button :confidence_id, confidence.id %>
+	        <%= f.label :confidence_id, confidence.weight.to_s+'% - '+confidence.name, :value => confidence.id, :class => "radio"%><br>
+	      <% end %>
+        </div>
+      </div>
+    </fieldset>
+    <div class="buttonrow">
+		<%= f.submit %>
+		<input type="button" value="Discard" class="button">
+	</div>
   <% end %>
-
-  <%= f.label :name, 'Opportunity'%>
-  <%= f.text_field :name %>
-
-  <%= f.label :order_value %>
-  <%= f.text_field :order_value %>
-
-  <%= f.label :order_date %>
-  <%= f.text_field :order_date %>
-
-  <p>
-	<label>Status</label>
-	<% Opportunity::STATUSES.each do |status| %>
-      <%= f.radio_button :status, status %>
-      <%= f.label :status, status.to_s.humanize, :value => status, :class => "radio" %><br />
-    <% end %>
-  </p>
-  <p>
-  <%= f.label :confidence_id %>
-  <% @confidences.each do |confidence| %>
-    <%= f.radio_button :confidence_id, confidence.id %>
-    <%= f.label :confidence_id, confidence.weight.to_s+'% - '+confidence.name, :value => confidence.id, :class => "radio"%><br />
-  <% end %>
-  </p>
-
-  <%= f.submit %>
-
-<% end %>
-
-<!-- TODO why doesn't the focus move from Customer after a tab key press? -->
+</div>
