--- a/app/views/layouts/golden.html.erb
+++ b/app/views/layouts/golden.html.erb
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<title>Sales2l</title>
-	<%= stylesheet_link_tag 's2l.css', "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.2/themes/cupertino/jquery-ui.css", 'menu/dropdown.css', 'menu/default.ultimate.css', 'slick.grid.css', 'example.css' %>
+	<%= stylesheet_link_tag 's2l.css', "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.2/themes/cupertino/jquery-ui.css", 'menu/dropdown.css', 'menu/default.ultimate.css', 'slick.grid.css', 'examples.css' %>
 	<%= javascript_include_tag 'jquery-1.4.2.min.js', 'rails.js', 'jquery-ui-1.8.2.custom.min.js', 'jquery.autocomplete.js', 'jquery.flot.min.js', 'jquery.event.drag-2.0.min.js', 'slick.grid.js', 'application.js' %>
 	<!--[if IE]><%= javascript_include_tag 'excanvas.compiled.js' %><![endif]-->
 	<%= csrf_meta_tag %>
