--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,21 +1,19 @@
-<h1>Listing users</h1>
-
+<h1>Users</h1>
 <table>
   <tr>
-    <th></th>
-    <th></th>
-    <th></th>
+    <th>Nickname</th>
+    <th>Email</th>
+    <th>Role</th>
   </tr>
-
-<% @users.each do |user| %>
-  <tr>
-    <td><%= link_to 'Show', user %></td>
-    <td><%= link_to 'Edit', edit_user_path(user) %></td>
-    <td><%= link_to 'Destroy', user, :confirm => 'Are you sure?', :method => :delete %></td>
+  <% @users.each do |user| %>
+  <tr>	
+    <td><%= link_to user.nickname, user %></td>
+    <td><%= user.email %></td>
+    <td><%= user.role %></td>
+    <% if can? :manage, User %>
+      <td><%= link_to 'edit', edit_user_path(user) %></td>
+    <% end %>
   </tr>
 <% end %>
 </table>
-
-<br />
-
 <%= link_to 'New User', new_user_path %>
