--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
-<p id="notice"><%= notice %></p>
+Nickname: <%= @user.nickname %><br />
+Email: <%= @user.email %><br />
+Role: <%= @user.role %><br />
+Time Zone: <%= @user.time_zone %>
 
-
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
