--- a/app/views/layouts/golden.html.erb
+++ b/app/views/layouts/golden.html.erb
@@ -1,43 +1,45 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 <head>
-	<title>Sales2l</title>
-	<%= stylesheet_link_tag 's2l.css', "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.2/themes/cupertino/jquery-ui.css", 'menu/dropdown.css', 'menu/default.ultimate.css', 'slick.grid.css', 'examples.css' %>
-	<%= javascript_include_tag 'jquery-1.4.2.min.js', 'rails.js', 'jquery-ui-1.8.2.custom.min.js', 'jquery.autocomplete.js', 'jquery.flot.min.js', 'jquery.event.drag-2.0.min.js', 'slick.grid.js', 'application.js' %>
+  <title>Sales2l</title>
+  <%= stylesheet_link_tag 's2l_red.css', "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.2/themes/cupertino/jquery-ui.css", 'menu/dropdown.css', 'menu/default.ultimate.css', 'slick.grid.css', 'superfish.css' %>
+  <%= javascript_include_tag 'jquery-1.4.2.min.js', 'rails.js', 'jquery-ui-1.8.2.custom.min.js', 'jquery.autocomplete.js', 'jquery.flot.min.js', 'jquery.event.drag-2.0.min.js', 'slick.grid.js', 'hoverintent.js', 'superfish.js', 'application.js' %>
 	<!--[if IE]><%= javascript_include_tag 'excanvas.compiled.js' %><![endif]-->
-	<%= csrf_meta_tag %>
+  <%= csrf_meta_tag %>
 </head>
-<!-- <body style='background: #4c4c4c url(images/grad1.png) 0 0 repeat-x;'> -->
-<!-- <body style='background:#f2f2f2;'> -->
+
 <body>
   <div class="main">
-  <!-- <div class="main" style="background-image: url(/images/baseline.png); background-repeat: repeat; background-position: 0 9px;"> -->
-	<div class="g320"><%= image_tag 'sales2l.png', :id => 'logo'%></div>
-	<div class="g640" id="top_nav">
-		<% if current_user %>
+	<div class="g960" id="header">
+	  <div id="logo">Sales2L</div>
+	  <div class="small" id="quicklinks">		
+	    <% if current_user %>
 		  Howdy <%= current_user.nickname %>! 
-		  <%= link_to "User Profile", profile_url %>
+		  <%= link_to "Profile", profile_url %>
 		  <% if can? :change_settings, Account %>
-		  <%= link_to "Account Settings", settings_url %>
+		    <%= link_to "Settings", settings_url %>
 		  <% end %>
-		  <%= link_to "Sign Out", destroy_user_session_url %>
-		<% end %>
-	</div>	
-	<div class="g960" id="nav">
-		<ul class="dropdown dropdown-horizontal">
-			<li id="n-home"><%= link_to("Home", home_url) %></li>
-			<li id="n-forecast"><%= link_to("Forecast", home_url) %></li>
-			<li id="n-opportunities"><%= link_to("Opportunities", opportunities_url) %></li>
-			<li id="n-forecast"><%= link_to("Forecast", home_url) %></li>
-			<li id="n-forecast"><%= link_to("Forecast", home_url) %></li>
-			<li id="n-more" style="border-right:1px solid #505050;"><span class="dir">More...</span>
-				<ul>
-					<li class="first"><%= link_to("Users", users_url) %></li>
-					<li><%= link_to("Confidences", confidences_url) %></li>
-				</ul>
-			</li>
-		</ul>
+		  <%= link_to "Sign out", destroy_user_session_url %>
+        <% end %>
+	  </div>	
 	</div>
+	<div class="g960" id="nav">
+	 	<ul class="sf-menu"> 
+					<li><%= link_to "Home", home_url %></li> 
+					<li><%= link_to "Forecast", home_url %></li> 
+					<li><%= link_to "Journal", home_url %></li> 
+					<li><%= link_to "Opportunities", opportunities_url %></li> 
+					<li><%= link_to "MySales2L", my_sales2l_url %></li> 
+					<li><a href="#">More</a> 
+					  <ul> 
+							<li><%= link_to "Users", users_url %></li> 
+							<li><%= link_to "Customers", customers_url %></li> 
+							<li><%= link_to "Confidences", confidences_url %></li> 
+					  </ul>
+					</li>
+				
+	</div>
+
 	<div class="g960">	
 			<% flash.each do |key, value| -%>
 			<h4 id="flash_<%= key %>"><%= value %></h4>
