--- a/app/views/layouts/red.html.erb
+++ b/app/views/layouts/red.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Sales2l</title>
   <%= stylesheet_link_tag 's2l_red.css', "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.2/themes/cupertino/jquery-ui.css", 'menu/dropdown.css', 'menu/default.ultimate.css', 'slick.grid.css', 'superfish_red.css' %>
-  <%= javascript_include_tag 'jquery-1.4.2.min.js', 'rails.js', 'jquery-ui-1.8.2.custom.min.js', 'jquery.autocomplete.js', 'jquery.flot.min.js', 'jquery.event.drag-2.0.min.js', 'slick.grid.js', 'hoverintent.js', 'superfish.js', 'application.js' %>
+  <%= javascript_include_tag 'jquery-1.4.2.min.js', 'rails.js', 'jquery-ui-1.8.2.custom.min.js', 'jquery.autocomplete.js', 'jquery.flot.min.js', 'jquery.event.drag-2.0.min.js', 'slick.grid.js', 'hoverIntent.js', 'superfish.js', 'application.js' %>
 	<!--[if IE]><%= javascript_include_tag 'excanvas.compiled.js' %><![endif]-->
   <%= csrf_meta_tag %>
 </head>
