--- a/app/views/account_targets/_form.html.erb
+++ b/app/views/account_targets/_form.html.erb
@@ -1,30 +1,28 @@
 <%= form_for(@account_target) do |f| %>
 
-  <h5><%= legend %></h5>
-
-  <% if @account_target.errors.any? %>
-    <ul>
-      <% @account_target.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-    </ul>
-  <% end %>
-
-  <%= f.label :fiscal_year, 'Fiscal year ending '+Date::MONTHNAMES.at(@current_account.fiscal_year_end)+':'%>
-  <%= select_year(@account_target.fiscal_year, {:field_name => 'fiscal_year'}) %>
-
-  <%= f.label :q1 %>
-  <%= f.text_field :q1 %>  
-
-  <%= f.label :q2 %>
-  <%= f.text_field :q2 %>
-
-  <%= f.label :q3 %>
-  <%= f.text_field :q3 %>
-
-  <%= f.label :q4 %>
-  <%= f.text_field :q4 %>
-
-  <%= f.submit %>
-
+  <div class='row'>
+    <%= f.label :fiscal_year, 'FY Ending ' + Date::MONTHNAMES.at(@current_account.fiscal_year_end) %>
+    <%= select_year(@account_target.fiscal_year, {:field_name => 'fiscal_year'}) %>
+  </div>
+  <div class='row'><%= f.label :q1 %><%= f.text_field :q1 %> </div>
+  <div class='row'><%= f.label :q2 %><%= f.text_field :q2 %></div>
+  <div class='row'><%= f.label :q3 %><%= f.text_field :q3 %></div>
+  <div class='row'><%= f.label :q4 %><%= f.text_field :q4 %></div>
+  <div class='row'><%= f.submit %></div>
 <% end %>	
+  
+  
+
+  
+   
+
+  
+  
+
+  
+  
+
+  
+  
+
+ 
