--- a/public/stylesheets/s2l_red.css
+++ b/public/stylesheets/s2l_red.css
@@ -285,7 +285,7 @@ h1, h2, h3, h4, h5, h6 {
 	color:#333;
 	text-decoration:none;
 }
-#quicklinks a:visited{color:#333;}
+#quicklinks a:visited{color:#333; margin-left:8px;}
 #quicklinks a:hover{color:#333; text-decoration:underline;}
 #nav {
 	float:right;
@@ -344,6 +344,10 @@ td {
 }
 tr:hover {
 	background:#fdf5de;
+}
+table.center {
+    margin-left:auto; 
+    margin-right:auto;
 }
 
 /* 
@@ -430,8 +434,19 @@ form label.radio {
   font-weight: normal;
 }
 
+form label.check {
+  float: none;
+  text-align: left;
+  margin: 0px 2px;
+  font-weight: normal;
+}
+
 form div.radio {
 	display: inline-block;
+}
+
+form input[type='checkbox'] {
+	margin-left: 153px;
 }
 
 form input[type='submit'] {
@@ -440,6 +455,10 @@ form input[type='submit'] {
 }
 .hint {
 	margin-left: 153px;
+}
+.inactive {
+    background-color: #EEE;
+    color: #999;
 }
 
 
