snapshot before moving away from slickgrid

--- a/app/views/account_targets/new.html.erb
+++ b/app/views/account_targets/new.html.erb
@@ -1,2 +1,2 @@
-<%= render :partial => 'form', :locals => {:legend => "New Account Target"} %>
-
+<h2 class='form_heading'>New Account Target</h2>
+<%= render :partial => 'form' %>
