--- a/app/views/opportunities/_form.html.erb
+++ b/app/views/opportunities/_form.html.erb
@@ -27,7 +27,7 @@
     </div>
   </div>
   
-  <div class='row'><%= f.submit %><input type="button" value="Discard" class="button"></div>
+  <div class='row'><%= f.submit %></div>
 
 <% end %>
 
