--- a/app/views/opportunities/edit.html.erb
+++ b/app/views/opportunities/edit.html.erb
@@ -1,1 +1,2 @@
-<%= render :partial => 'form', :locals => {:legend => "Update Opportunity"} %>
+<h2 class='form_heading'>Edit Opportunity</h2>
+<%= render :partial => 'form' %>
