--- a/app/views/opportunities/new.html.erb
+++ b/app/views/opportunities/new.html.erb
@@ -1,1 +1,2 @@
-<%= render :partial => 'form', :locals => {:legend => "New Opportunity"} %>
+<h2 class='form_heading'>New Opportunity</h2>
+<%= render :partial => 'form' %>
