hirb, forecast page, chart fix

--- a/app/views/accounts/change_settings.html.erb
+++ b/app/views/accounts/change_settings.html.erb
@@ -1,25 +1,18 @@
 <%= form_for(@account, :url => settings_path, :html => {:method => "post"}) do |f| %>
 
-  <h5>Update Settings</h5>
-  
-    <% if @account.errors.any? %>
-      <ul>
-      <% @account.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    <% end %>
+  <h2>Update Account Settings</h2>
 
+  <div class='row'>
     <%= f.label :time_zone %>
-    <%= f.time_zone_select :time_zone, ActiveSupport::TimeZone.us_zones, 
-                           :default => "Pacific Time (US & Canada)", :include_blank => true %>
-    
+    <%= f.time_zone_select :time_zone, ActiveSupport::TimeZone.us_zones,
+      :default => "Pacific Time (US & Canada)", :include_blank => true %>
+  </div>
+  <div class='row'>
     <%= f.label :fiscal_year_end %>
     <%= select_month(@account.fiscal_year_end, :field_name => 'fiscal_year_end') %>
+  </div>
+  <div class='row'><%= f.label "Recent Period (days)" %><%= f.text_field :recent_period %></div>
 
-    <%= f.label "Recent Period (Number of Days)" %>
-    <%= f.text_field :recent_period %>
-
-    <p><%= f.submit %></p>
+  <div class='row'><%= f.submit %></div>
  
 <% end %>	
