--- a/app/views/account_targets/_form.html.erb
+++ b/app/views/account_targets/_form.html.erb
@@ -1,10 +1,10 @@
 <%= form_for(@account_target) do |f| %>
-
   <div class='row'>
     <%= f.label :fiscal_year, 'FY Ending ' + Date::MONTHNAMES.at(@current_account.fiscal_year_end) %>
-    <%= select_year(@account_target.fiscal_year, {:field_name => 'fiscal_year'}) %>
+    <%= f.text_field :fiscal_year %>
+    <br><span class="hint">Enter a year, like 2020.</span>
   </div>
-  <div class='row'><%= f.label :q1 %><%= f.text_field :q1 %> </div>
+  <div class='row'><%= f.label :q1 %><%= f.text_field :q1 %></div>
   <div class='row'><%= f.label :q2 %><%= f.text_field :q2 %></div>
   <div class='row'><%= f.label :q3 %><%= f.text_field :q3 %></div>
   <div class='row'><%= f.label :q4 %><%= f.text_field :q4 %></div>
