--- a/app/views/account_targets/index.html.erb
+++ b/app/views/account_targets/index.html.erb
@@ -2,7 +2,7 @@
 	<caption>Account Targets</caption>
 	<thead>
 		<tr>
-			<th>Fiscal Year</th>			
+			<th>Fiscal Year End</th>			
 			<th>1st Quarter</th>
 			<th>2nd Quarter</th>
 			<th>3rd Quarter</th>
@@ -14,12 +14,13 @@
 	</thead>
 	<tbody> 
 		<% @account_targets.each do |account_target| %>
+		  <% @fye = Date.new(account_target.fiscal_year, @current_account.fiscal_year_end).strftime("%B %Y") %>
 		  <tr>
-			<td><%= account_target.fiscal_year %></td>
-			<td><%= account_target.q1 %></td>
-			<td><%= account_target.q2 %></td>
-			<td><%= account_target.q3 %></td>
-			<td><%= account_target.q4 %></td>
+			<td><%= @fye %></td>
+			<td><%= number_to_currency(account_target.q1, :precision => 0) %></td>
+			<td><%= number_to_currency(account_target.q2, :precision => 0) %></td>
+			<td><%= number_to_currency(account_target.q3, :precision => 0) %></td>
+			<td><%= number_to_currency(account_target.q4, :precision => 0) %></td>
 			<% if can? :update, AccountTarget %> 
 			  <td><%= link_to "edit", edit_account_target_path(account_target) %></td>
 			<% end %>
