--- a/app/views/layouts/red.html.erb
+++ b/app/views/layouts/red.html.erb
@@ -26,7 +26,7 @@
 	    <div id ="nav" class="small" style="font-weight:bold">
 		  <ul class="sf-menu"> 
 		  	<li><%= link_to "Home", home_url %></li> 
-		  	<li><%= link_to "Forecast", home_url %></li> 
+		  	<li><%= link_to "Forecast", forecast_url %></li> 
 		  	<li><%= link_to "Journal", home_url %></li> 
 		  	<li><%= link_to "Opportunities", opportunities_url %></li> 
 		  	<li><%= link_to "MySales2L", my_sales2l_url %></li> 
